# Chip8Emulator

./: .gitattributes  CMakeLists.txt  README.md
ROMS/: testRom.rom8
h/: Chip8.h  Chip8.hpp  Platform.hpp
src/: Chip8.cpp  Platform.cpp  main.cpp
